force-app/main/default/objects/HL7_Staging__c/HL7_Staging__c.object-meta.xml
<CustomObject>
    <label>HL7_Staging</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>HL7_Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HL7_Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>