force-app/main/default/objects/HL7_Staging__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HL7_Staging</relationshipLabel>
    <relationshipName>HL7_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>