force-app/main/default/objects/HL7_Staging__c/fields/CareEpisodeID__c.field-meta.xml
<CustomField>
    <fullName>CareEpisodeID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareEpisode Name</label>
    <referenceTo>ElixirSuite__Visits__c</referenceTo>
    <relationshipLabel>HL7_Staging</relationshipLabel>
    <relationshipName>HL7_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>