force-app/main/default/objects/HL7_Staging__c/fields/HL7_Message__c.field-meta.xml
<CustomField>
    <fullName>HL7_Message__c</fullName>
    <label>HL7 Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>