force-app/main/default/objects/HL7_Staging__c/fields/IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed?</label>
    <type>Checkbox</type>
</CustomField>