force-app/main/default/objects/HL7_Staging__c/fields/MessageSubType__c.field-meta.xml
<CustomField>
    <fullName>MessageSubType__c</fullName>
    <label>Message SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A01</fullName>
            </value>
            <value>
                <fullName>A03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>