force-app/main/default/objects/HL7_Staging__c/fields/MessageType__c.field-meta.xml
<CustomField>
    <fullName>MessageType__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>